<resources>
    <string name="app_name">Trivia World</string>
    <string name="opciones">Opciones</string>
    <string name="reanudar">Reanudar</string>
    <string name="salir">Salir</string>
<<<<<<< Updated upstream

    <!-- JAVI PantallaPrincipal-->
    <string name="Bperfil">PERFIL</string>
    <string name="Bsociales">REDES SOCIALES</string>
    <string name="bredes">REDES SOCIALES</string>
    <string name="Iajustes">AJUSTES</string>
    <string name="Bjugar">JUGAR</string>


    <!-- NICO PantallaOpciones-->
    <string name="sonido">Sonido</string>
    <string name="musica">Musica</string>
    <string name="nivelSonido">Nivel de Sonido</string>
    <string name="nivelMusica">Nivel de Musica</string>
    <string name="atras">Atras</string>
    <string name="cambioPass">Cambiar de Contraseña</string>
    <string name="user">Usuario</string>
    <string name="passAntigua">Contraseña Antigua</string>
    <string name="passNueva">Contraseña Nueva</string>
    <string name="cambiar">Cambiar</string>
    <string name="nickName">NickName</string>
    <string name="puntuacion">Tu puntuacion es: </string>
    <string name="imagenDescripcion">Imagen de perfil</string>
    <string name="txtNombre">Nombre</string>


=======
    <string name="Bjugar">JUGAR</string>
    <string name="Bperfil">PERFIL</string>
    <string name="Bsociales">Redes      Sociales</string>
    <string name="Iajustes">ajustes</string>
>>>>>>> Stashed changes
</resources>