<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky"
    >


    <ImageView
        android:id="@+id/marcoNaranjaOpciones"
        android:contentDescription="@string/descripcion_gui_redes"
        android:layout_width="359dp"
        android:layout_height="552dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"

        app:srcCompat="@drawable/gui_redes" />

    <TextView
        android:id="@+id/txtNivelSonido"
        android:layout_width="160dp"
        android:layout_height="33dp"

        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:text="@string/nivelSonido"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch2" />

    <SeekBar
        android:id="@+id/nivelMusica"
        android:layout_width="315dp"
        android:layout_height="31dp"


        android:layout_marginStart="40dp"
        android:layout_marginTop="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNivelSonido" />

    <TextView
        android:id="@+id/txtNivelMusica"
        android:layout_width="157dp"

        android:layout_height="30dp"
        android:layout_marginStart="44dp"
        android:text="@string/nivelMusica"
        android:textSize="18sp"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nivelMusica" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch2"
        android:layout_width="131dp"
        android:layout_height="48dp"


        android:layout_marginStart="12dp"

        android:layout_marginTop="16dp"
        android:text="@string/musica"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/marcoNaranjaOpciones"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

    <SeekBar
        android:id="@+id/nivelSonido"
        android:layout_width="320dp"
        android:layout_height="30dp"

        android:layout_marginStart="44dp"
        app:layout_constraintBottom_toTopOf="@+id/contenedorCambioContrasenia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNivelMusica"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch1"
        android:layout_width="131dp"
        android:layout_height="48dp"

        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:text="@string/sonido"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/marcoNaranjaOpciones"
        app:layout_constraintTop_toTopOf="@+id/marcoNaranjaOpciones" />

    <Button
        android:id="@+id/btnAtras"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="irAInicio"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="40dp"
        android:background="@color/Naranja"
        android:backgroundTintMode="add"
        android:text="@string/atras"
        app:layout_constraintEnd_toEndOf="@+id/marcoNaranjaOpciones"
        app:layout_constraintTop_toTopOf="@+id/marcoNaranjaOpciones" />

    <LinearLayout
        android:id="@+id/contenedorCambioContrasenia"
        android:layout_width="396dp"
        android:layout_height="192dp"

        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnCambiar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txtCambioPass"
            android:layout_width="315dp"
            android:layout_height="13dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="9dp"
            android:layout_weight="1"
            android:text="@string/cambioPass"

            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText

            android:id="@+id/cambioUsuario"
            android:layout_marginEnd="9dp"
            android:layout_width="314dp"
            android:layout_height="wrap_content"


            android:layout_gravity="center"

            android:layout_weight="1"
            android:autofillHints="usuario"
            android:hint="@string/user"
            android:inputType="text"
            android:textSize="18sp" />

        <EditText

            android:id="@+id/passAntigua"
            android:layout_width="314dp"
            android:layout_height="wrap_content"

            android:layout_marginEnd="9dp"
            android:layout_gravity="center"

            android:layout_weight="2"
            android:autofillHints="antigua"
            android:hint="@string/passAntigua"
            android:inputType="textPassword"
            android:textSize="18sp" />

        <EditText

            android:id="@+id/passNueva"
            android:layout_width="314dp"
            android:layout_height="wrap_content"


            android:layout_gravity="center"
            android:layout_marginEnd="9dp"
            android:layout_weight="1"
            android:autofillHints="nueva"
            android:hint="@string/passNueva"
            android:inputType="textPassword"
            android:textSize="18sp" />


    </LinearLayout>

    <ImageView
        android:id="@+id/logo_Opciones"
        android:layout_width="297dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/descripcion_logo_redes"
        app:layout_constraintBottom_toTopOf="@+id/marcoNaranjaOpciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/opciones" />

    <Button
        android:id="@+id/btnCambiar"
        android:layout_width="82dp"
        android:layout_height="29dp"
        android:onClick="cambiaPass"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:background="@color/Naranja"
        android:text="@string/cambiar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.723"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contenedorCambioContrasenia" />


</androidx.constraintlayout.widget.ConstraintLayout>